--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </button> -->
     </header>
     <div id="upgrades">
-        <h1 class="upgrade-container" id="upgradeTitle">Upgrades!</h1>
 
-        <button class="upgrade-container-1" id="upgrade1"><span id="Strong-Fingers">Strong Fingers</span>price:<span id="price1">11</span><span id="error1"></span></button>
+        <button class="upgrade-container-1" id="upgrade1"><span id="Strong-Fingers">Strong Fingers</span>price:<span id="price1">11</span></button>
+        <button class="upgrade-container-2" id="upgrade2"><span id="Auto-Clicker">Auto-Clicker</span>price:<span id="price2">149</span></button>
         
 
         <div class="buy-amount">
-            <span id="buy">Buy</span>
+            <span id="buy"><strong>Buy:</strong></span>
             <button class="buy-button" id="buy1"><span id="buy-1">1</span></button>
             <button class="buy-button" id="buy10"><span id="buy-10">10</span></button>
             <button class="buy-button" id="buy100"><span id="buy-100">100</span></button>
