--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h1 id="store-title">Store</h1>
         </div>
 
-        <button class="upgrade-container-1" id="upgrade1"><span id="Strong-Fingers">Strong Fingers</span>$<span id="price1">11</span></button>
-        <button class="upgrade-container-2" id="upgrade2"><span id="Auto-Clicker">Auto-Clicker</span>$<span id="price2">149</span></button>
+        <button class="upgrade-container-1" id="upgrade1"><span id="Strong-Fingers">Strong Fingers:</span><span id="price1">$11</span></button>
+        <button class="upgrade-container-2" id="upgrade2"><span id="Auto-Clicker">Auto-Clicker:</span><span id="price2">$149</span></button>
         
 
         <div class="buy-amount">
