--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clicker Game - IT PROJECT</title>
+  <title>IT PROJECT Welcome — SEQTA Learn</title>
   <link rel="icon"
     href="https://play-lh.googleusercontent.com/_fISV_vSkFKhe9VZM0OsMrPIwOEgqfDKNJWfcDJ3rGwe9iA7x5xFszoSBvJkayA1pgc">
   <link href="upgrade.css" rel="stylesheet">
   <link href="MainGame.css" rel="stylesheet">
   <link href="main.css" rel="stylesheet">
-  <link href="LeftSide.css" rel="stylesheet">
+  <link href="menu.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,8 +33,7 @@
         <h1 id="upgrade-title">Upgrades</h1>
       </div>
       <div class="container upgradeHover">
-        <button class="upgrade-container" id="strongFinger">Strong Fingers<br><span class="bottomLine">price: $<span
-              id="price1">0.00</span></span></button>
+        <button class="upgrade-container" id="strongFinger">Strong Fingers<br><span class="bottomLine">price: $<span id="price1">0.00</span></span></button>
       </div>
     </div>
 
@@ -42,11 +41,24 @@
       fill="#e3e3e3">
       <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
     </svg>
-    <div class="window ">
-      <button class="setting container-left upgradeHover" id="settingButton">Settings</button>
-      <button class="setting container-left upgradeHover" id="minigameButton">Minigames</button>
-      <button class="setting container-left upgradeHover" id="statButton">Stats</button>
+
+    <div id="menuTitle" class="hide">
+      <h1 id="menuH1">Menu</h1>
     </div>
+    
+    <div class="window hide">
+    </div>
+
+    <p class="hide" id="stat">
+      Total clicks: <span id="total-clicks"></span><br>
+      Total money made: $<span id="total-money"></span>
+
+    </p>
+
+    <button class="setting container-left upgradeHover hide" id="settingButton">Settings</button>
+    <button class="setting container-left upgradeHover hide" id="minigameButton">Minigames</button>
+    <button class="setting container-left upgradeHover hide" id="statButton">Stats</button>
+    <button class="setting container-left upgradeHover hide" id="closeButton">Close</button>
 
     <div id="LeftSide" class="hide">
       <div class="container">
