--- a/index.html
+++ b/index.html
@@ -1,78 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>IT PROJECT Welcome — SEQTA Learn</title>
+    <link
+      rel="icon"
+      href="https://play-lh.googleusercontent.com/_fISV_vSkFKhe9VZM0OsMrPIwOEgqfDKNJWfcDJ3rGwe9iA7x5xFszoSBvJkayA1pgc"
+    />
+    <link href="upgrade.css" rel="stylesheet" />
+    <link href="MainGame.css" rel="stylesheet" />
+    <link href="main.css" rel="stylesheet" />
+    <link href="menu.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IT PROJECT Welcome — SEQTA Learn</title>
-  <link rel="icon"
-    href="https://play-lh.googleusercontent.com/_fISV_vSkFKhe9VZM0OsMrPIwOEgqfDKNJWfcDJ3rGwe9iA7x5xFszoSBvJkayA1pgc">
-  <link href="upgrade.css" rel="stylesheet">
-  <link href="MainGame.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet">
-  <link href="menu.css" rel="stylesheet">
-</head>
-
-<body>
-  <script src="index.js" defer></script>
-  <script src="other.js" defer></script>
-  <main>
-
-    <div id="title-container">
-      <h1 id="title"><span id="titleJS">Clicker Game</span></h1>
-    </div>
-
-    <h3 id="click-container">$<span id="moneyDisplay">0</span></h3>
-
-    <div>
-      <button id="button"></button>
-    </div>
-
-    <div id="upgrades">
-      <div class="container">
-        <h1 id="upgrade-title">Upgrades</h1>
+  <body>
+    <script src="index.js" defer></script>
+    <script src="other.js" defer></script>
+    <main>
+      <div id="title-container">
+        <h1 id="title"><span id="titleJS">Clicker Game</span></h1>
       </div>
-      <div class="container upgradeHover">
-        <button class="upgrade-container" id="strongFinger">Strong Fingers<br><span class="bottomLine">price: $<span id="price1">0.00</span></span></button>
+
+      <h3 id="click-container">$<span id="moneyDisplay">0</span></h3>
+
+      <div>
+        <button id="button"></button>
       </div>
-    </div>
 
-    <svg id="menu" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-      fill="#e3e3e3">
-      <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
-    </svg>
-
-    <div id="menuTitle" class="hide">
-      <h1 id="menuH1">Menu</h1>
-    </div>
-    
-    <div class="window hide">
-    </div>
-
-    <p class="hide" id="stat">
-      Total clicks: <span id="total-clicks"></span><br>
-      Total money made: $<span id="total-money"></span>
-
-    </p>
-
-    <button class="setting container-left upgradeHover hide" id="settingButton">Settings</button>
-    <button class="setting container-left upgradeHover hide" id="minigameButton">Minigames</button>
-    <button class="setting container-left upgradeHover hide" id="statButton">Stats</button>
-    <button class="setting container-left upgradeHover hide" id="closeButton">Close</button>
-
-    <div id="LeftSide" class="hide">
-      <div class="container">
-        <h1 id="minigame-title">Minigames</h1>
+      <div id="upgrades">
+        <div class="container">
+          <h1 id="upgrade-title">Upgrades</h1>
+        </div>
+        <div class="container upgradeHover">
+          <button class="upgrade-container" id="strongFinger">
+            Strong Fingers
+            <br />
+            <span class="bottomLine">
+              price: $
+              <span id="price1"> 0.00 </span>
+            </span>
+          </button>
+        </div>
+        <div class="container upgradeHover">
+          <button class="upgrade-container" id="test">
+            Strong Fingers
+            <br />
+            <span class="bottomLine">
+              price: $
+              <span id="price2"> 0.00 </span>
+            </span>
+          </button>
+        </div>
       </div>
-    </div>
 
+      <svg
+        id="menu"
+        xmlns="http://www.w3.org/2000/svg"
+        height="32px"
+        viewBox="0 -960 960 960"
+        width="32px"
+        fill="#e3e3e3"
+      >
+        <path
+          d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
+        />
+      </svg>
 
-    <div>
-      <div class="spacer"></div>
-    </div>
+      <div id="menuTitle" class="hide">
+        <h1 id="menuH1">Menu</h1>
+      </div>
 
+      <div class="window hide"></div>
 
-  </main>
-</body>
+      <p class="hide" id="stat">
+        Total clicks: <span id="total-clicks"></span><br />
+        Total money made: $<span id="total-money"></span>
+      </p>
 
+      <button
+        class="setting container-left upgradeHover hide"
+        id="settingButton"
+      >
+        Settings
+      </button>
+      <button
+        class="setting container-left upgradeHover hide"
+        id="minigameButton"
+      >
+        Minigames
+      </button>
+      <button class="setting container-left upgradeHover hide" id="statButton">
+        Stats
+      </button>
+      <button class="setting container-left upgradeHover hide" id="closeButton">
+        Close
+      </button>
+
+      <div id="LeftSide" class="hide">
+        <div class="container">
+          <h1 id="minigame-title">Minigames</h1>
+        </div>
+      </div>
+
+      <div>
+        <div class="spacer"></div>
+      </div>
+    </main>
+  </body>
 </html>
