--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
       </div>
 
       <div id="upgrades">
+
         <div class="container">
           <h1 id="upgrade-title">Upgrades</h1>
         </div>
+
         <div class="container upgradeHover">
           <button class="upgrade-container" id="strongFinger">
             Strong Fingers
@@ -42,6 +44,7 @@
             </span>
           </button>
         </div>
+
         <div class="container upgradeHover">
           <button class="upgrade-container" id="test">
             Strong Fingers
@@ -72,11 +75,13 @@
       </div>
 
       <div class="window hide"></div>
-
-      <p class="hide" id="stat">
-        Total clicks: <span id="total-clicks"></span><br />
-        Total money made: $<span id="total-money"></span>
-      </p>
+      
+      <div id="statContainer" class="hide">
+        <p class="hide" id="stat">
+          Total clicks: <span id="total-clicks"></span><br/>
+          Total money made: $<span id="total-money"></span>
+        </p>
+      </div>
 
       <button
         class="setting container-left upgradeHover hide"
