--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
 
       <h3 id="click-container">$<span id="moneyDisplay">0</span></h3>
+      <h3 id="click-container">Clicks Per Second: <span id="space"> a</span><span id="clicksPerSecond">0</span></h3>
 
       <div>
         <button id="button"></button>
@@ -46,8 +47,8 @@
         </div>
 
         <div class="container upgradeHover">
-          <button class="upgrade-container" id="test">
-            Strong Fingers
+          <button class="upgrade-container" id="autoClicker">
+            Auto Clicker
             <br />
             <span class="bottomLine">
               price: $
@@ -101,12 +102,6 @@
       <button class="setting container-left upgradeHover hide" id="closeButton">
         Close
       </button>
-
-      <div id="LeftSide" class="hide">
-        <div class="container">
-          <h1 id="minigame-title">Minigames</h1>
-        </div>
-      </div>
 
       <div>
         <div class="spacer"></div>
