--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
       <div id="statContainer" class="hide">
         <p class="hide" id="stat">
           Total clicks: <span id="total-clicks"></span><br/>
-          Total money made: $<span id="total-money"></span>
+          Total money made: $<span id="total-money"></span><br/>
+          Total money spent: $<span id="total-spent"></span><br/>
+          Total play time: <span id="play-time"></span> <span id="play-time-measurement"></span><br/>
         </p>
       </div>
 
