--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h3 id="click-container">Clicks Per Second: <span id="space"> a</span><span id="clicksPerSecond">0</span></h3>
 
       <div>
-        <button id="button"></button>
+        <button id="button" type="button" name="click button"> <span class="hide">a</span> </button>
       </div>
 
       <div id="upgrades">
@@ -36,7 +36,7 @@
         </div>
 
         <div class="container upgradeHover">
-          <button class="upgrade-container" id="strongFinger">
+          <button class="upgrade-container" id="strongFinger" name="strong finger upgrade" type="button">
             Strong Fingers
             <br />
             <span class="bottomLine">
@@ -47,7 +47,7 @@
         </div>
 
         <div class="container upgradeHover">
-          <button class="upgrade-container" id="autoClicker">
+          <button class="upgrade-container" id="autoClicker" name="auto clicker upgrade" type="button">
             Auto Clicker
             <br />
             <span class="bottomLine">
@@ -56,7 +56,20 @@
             </span>
           </button>
         </div>
+        <div class="container upgradeHover">
+          <button class="upgrade-container" id="robotArm" name="robot arm upgrade" type="button">
+            Robot Arm
+            <br />
+            <span class="bottomLine">
+              price: $
+              <span id="price3"> 0.00 </span>
+            </span>
+          </button>
+        </div>
+
       </div>
+
+
 
       <svg
         id="menu"
