--- a/index.html
+++ b/index.html
@@ -35,34 +35,35 @@
           <h1 id="upgrade-title">Upgrades</h1>
         </div>
 
-        <div class="container upgradeHover">
+        <div class="upgradeContainer upgradeHover" id="u1div">
           <button class="upgrade-container" id="strongFinger" name="strong finger upgrade" type="button">
-            Strong Fingers
+            <span id="u1Title">Strong Fingers</span>
             <br />
-            <span class="bottomLine">
+            <span class="bottomLine" id="bL1">
               price: $
               <span id="price1"> 0.00 </span>
             </span>
           </button>
         </div>
 
-        <div class="container upgradeHover">
+        <div class="upgradeContainer upgradeHover" id="u2div">
           <button class="upgrade-container" id="autoClicker" name="auto clicker upgrade" type="button">
-            Auto Clicker
+            <span id="u2Title">Auto Clicker</span>
             <br />
-            <span class="bottomLine">
+            <span class="bottomLine" id="bL2">
               price: $
               <span id="price2"> 0.00 </span>
             </span>
           </button>
         </div>
-        <div class="container upgradeHover">
-          <button class="upgrade-container" id="robotArm" name="robot arm upgrade" type="button">
-            Robot Arm
+        <div class="upgradeContainer upgradeHover notDiscoveredDiv" id="u3div">
+          <button class="upgrade-container notDiscovered" id="robotArm" name="robot arm upgrade" type="button">
+            <span class="notDiscoveredText" id="robotArmText">???</span>
+            <span id="u3Title" class="hide">Robot Arm</span>
             <br />
-            <span class="bottomLine">
+            <span class="bottomLine hide" id="bL3">
               price: $
-              <span id="price3"> 0.00 </span>
+              <span id="price3" class="hide"> 0.00 </span>
             </span>
           </button>
         </div>
