--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
           </button>
         </div>
 
-        <div class="upgradeContainer upgradeHover" id="u2div">
-          <button class="upgrade-container" id="autoClicker" name="auto clicker upgrade" type="button">
-            <span id="u2Title">Auto Clicker</span>
+        <div class="upgradeContainer upgradeHover notDiscoveredDiv" id="u2div">
+          <button class="upgrade-container notDiscovered" id="autoClicker" name="auto clicker upgrade" type="button">
+            <span class="notDiscoveredText" id="autoClickerText">???</span>
+            <span id="u2Title" class="hide">Auto Clicker</span>
             <br />
-            <span class="bottomLine" id="bL2">
+            <span class="bottomLine hide" id="bL2">
               price: $
-              <span id="price2"> 0.00 </span>
+              <span id="price2" class="hide"> 0.00 </span>
             </span>
           </button>
         </div>
