--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IT PROJECT Welcome — SEQTA Learn</title>
+    <title id="page-title">IT PROJECT Welcome — SEQTA Learn</title>
     <link
       rel="icon"
       href="https://play-lh.googleusercontent.com/_fISV_vSkFKhe9VZM0OsMrPIwOEgqfDKNJWfcDJ3rGwe9iA7x5xFszoSBvJkayA1pgc"
@@ -94,9 +94,9 @@
 
       <div id="settingContainer" class="hide">
         <form id="setting">
-          <label id="websiteTitle">Website Title</label>
-          <input type="text" for="websiteTitle" title="websiteTitle">
-          <button type="submit" name="websiteTitleSubmitButton" id="titleButton">Apply</button>
+          <label id="websiteTitle">Website Title: </label>
+          <input type="text" for="websiteTitle" title="websiteTitle" id="websiteTitleValue">
+          <div id="titleButton">Apply</div>
         </form>
       </div>
       
