--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
       rel="icon"
       href="https://play-lh.googleusercontent.com/_fISV_vSkFKhe9VZM0OsMrPIwOEgqfDKNJWfcDJ3rGwe9iA7x5xFszoSBvJkayA1pgc"
     />
-    <link href="upgrade.css" rel="stylesheet" />
-    <link href="MainGame.css" rel="stylesheet" />
-    <link href="main.css" rel="stylesheet" />
-    <link href="menu.css" rel="stylesheet" />
+    <link href="css/upgrade.css" rel="stylesheet" />
+    <link href="css/MainGame.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <link href="css/menu.css" rel="stylesheet" />
   </head>
 
   <body>
-    <script src="index.js" defer></script>
-    <script src="menu.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <script src="js/menu.js" defer></script>
     <main>
       <div id="title-container">
         <h1 id="title"><span id="titleJS">Clicker Game</span></h1>
