google adsense potential

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/menu.css" rel="stylesheet" />
     <link href="css/minigame.css" rel="stylesheet" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3415204069172722"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
