--- a/index.html
+++ b/index.html
@@ -132,13 +132,15 @@
         Close
       </button>
       
-      <div id="minigameMenu" class="hide minigameMenuButton">
+      <div id="minigameMenu" class="minigameMenuButton">
         <div id="minigameTitleDiv">
           <h1 id="minigameTitle">
             Minigames
           </h1>
         </div>
-        
+
+        <div id="minigameSpacer">
+        </div>
       </div>
 
       <div id="minigameMenuButton" class="minigameMenuButton">
