--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/menu.css" rel="stylesheet" />
     <link href="css/minigame.css" rel="stylesheet" />
+    <link href="css/heads-or-tails.css" rel="stylesheet" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3415204069172722"
      crossorigin="anonymous"></script>
   </head>
@@ -138,6 +139,29 @@
             Minigames
           </h1>
         </div>
+
+        <div id="headTailsDiv">
+          <img src="assets/Heads_or_Tails.jpg" alt="heads or tails banner for minigame" id="headTailsImg">
+
+          <div id="optionsDiv">
+
+            <div id="heads" class="coin">Heads</div>
+
+            <div id="tails" class="coin">Tails</div>
+
+            <div id="spend">
+              <label id="betAmountLabel">$ </label>
+              <input type="text" for="betAmount" title="betAmount" id="betAmount">
+              <div id="betButton">Bet</div>
+              <div><span id="insufficientFunds" class="hid">Insufficient Funds</span></div>
+            </div>
+
+          </div>
+
+
+        </div>
+
+        
 
         <div id="minigameSpacer">
         </div>
