--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             </span>
           </button>
         </div>
+
         <div class="upgradeContainer upgradeHover notDiscoveredDiv" id="u3div">
           <button class="upgrade-container notDiscovered" id="robotArm" name="robot arm upgrade" type="button">
             <span class="notDiscoveredText" id="robotArmText">???</span>
@@ -71,6 +72,18 @@
             <span class="bottomLine hide" id="bL3">
               price: $
               <span id="price3" class="hide"> 0.00 </span>
+            </span>
+          </button>
+        </div>
+
+        <div class="upgradeContainer upgradeHover notDiscoveredDiv" id="u4div">
+          <button class="upgrade-container notDiscovered" id="robotFactory" name="robot factory upgrade" type="button">
+            <span class="notDiscoveredText" id="robotFactoryText">???</span>
+            <span id="u4Title" class="hide">Robot Factory</span>
+            <br />
+            <span class="bottomLine hide" id="bL4">
+              price: $
+              <span id="price4" class="hide"> 0.00 </span>
             </span>
           </button>
         </div>
@@ -112,6 +125,8 @@
           Total money made: $<span id="total-money"></span><br/>
           Total money spent: $<span id="total-spent"></span><br/>
           Total play time: <span id="play-time"></span> <span id="play-time-measurement"></span><br/>
+          Total money gambled: $<span id="gambled"></span><br/>
+          Total money lost/made gambilng: $<span id="madeGambling"></span><br/>
         </p>
       </div>
 
