--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link href="css/MainGame.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <link href="css/menu.css" rel="stylesheet" />
-    <link href="css/minigame.css" rel="stylesheet" />
-    <link href="css/heads-or-tails.css" rel="stylesheet" />
+    <link href="css/minigames/minigame.css" rel="stylesheet" />
+    <link href="css/minigames/heads-or-tails.css" rel="stylesheet" />
+    <link href="css/minigames/spinner.css" rel="stylesheet" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3415204069172722"
      crossorigin="anonymous"></script>
   </head>
@@ -172,6 +173,31 @@
             </div>
             <div id="insufficientFundsDiv">
               <p><span id="insufficientFunds" class="hide">Insufficient Funds</span></p>
+            </div>
+
+          </div>
+
+        </div>
+
+
+        <div id="spinnerDiv">
+          <img src="assets/Spinner Wheel.png" alt="Spin Wheel for minigame" id="spinnerImg">
+
+          <div id="optionsDiv2">
+
+            <div id="red" class="coin">Red</div>
+
+            <div id="blue" class="coin">Blue</div>
+
+            <div id="green" class="coin">Green</div>
+
+            <div id="spend2">
+              <label id="betAmountLabel2">$ </label>
+              <input type="text" for="betAmount" title="betAmount" id="betAmount2">
+              <div id="betButton2">Bet</div>
+            </div>
+            <div id="insufficientFundsDiv2">
+              <p><span id="insufficientFunds2" class="hide">Insufficient Funds</span></p>
             </div>
 
           </div>
