--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="js/menu.js" defer></script>
     <script src="js/minigames/minigames-menu.js" defer></script>
     <script src="js/minigames/heads-or-tails.js" defer></script>
+    <script src="js/minigames/spinner.js" defer></script>
     <main>
       <div id="title-container">
         <h1 id="title"><span id="titleJS">Clicker Game</span></h1>
