--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <div id="betButton2">Bet</div>
             </div>
             <div id="insufficientFundsDiv2">
-              <p><span id="insufficientFunds2" class="hide">Insufficient Funds</span></p>
+              <p><span id="insufficientFunds2" class="">Insufficient Funds</span></p>
             </div>
 
           </div>
