--- a/index.html
+++ b/index.html
@@ -192,10 +192,17 @@
             <div id="blue" class="coin">Blue</div>
 
             <div id="green" class="coin">Green</div>
-
+            <!--
             <label id="numberSelect"> </label>
-            <input type="text" for="numberSelect" title="numberSelect" id="number">
+            <select id="numberSelectInput" name="numberSelectInput" for="numberSelectInput" title="numberSelectInput">
+              <option value="1">3</option>
+              <option value="2">7</option>
+              <option value="3">9</option>
+              <option value="4">10</option>
+              <option value="5">17</option>
+            </select>
             <div id="numberSelectButton">Select</div>
+            -->
             <div id="insufficientFundsDiv2">
               <p><span id="insufficientFunds2" class="hide">Invalid Number</span></p>
             </div>
@@ -206,7 +213,7 @@
               <div id="betButton2">Bet</div>
             </div>
             <div id="insufficientFundsDiv2">
-              <p><span id="insufficientFunds2" class="">Insufficient Funds</span></p>
+              <p><span id="insufficientFunds2" class="hide">Insufficient Funds</span></p>
             </div>
 
           </div>
